compiler/weave_syntax/tests/data/syntax/statements/a0004.error
error: Unexpected tokens
        --> <source>:2:26
         |
       2 |     #[Deprecated] public break;
         |                          ^^^^^
